--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>I want to become a developer because with this i can convert my creative ideas into softwares with the help of coding which makes me satisfy with my work, I love coding. </p>
     <script type="text/javascript" src="./script.js">
 </script>
 
